--- a/TSI-PI1/home.html
+++ b/TSI-PI1/home.html
@@ -13,7 +13,7 @@
 <header>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">LOGO</a>
+      <a class="navbar-brand" href="#">Ace of Spades Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,8 +21,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">FAQ</a>
+          <a class="nav-link" href="#">About</a>
         </div>
       </div>
     </div>
@@ -32,80 +32,150 @@
 <body>
 
   <!-- Slider -->
-
-  <div class="slider">
-    <div class="slider-container">
-      <div class="slider-item">
-        <img src="./slider1.jpg" alt="Produto 1">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="slider3.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="slider-item">
-        <img src="./slider2.jpg" alt="Produto 2">
+      <div class="carousel-item">
+        <img src="slider2.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="slider-item">
-        <img src="./slider1.jpg" alt="Produto 3">
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
       </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-
-  <div class="slider-nav">
-    <button onclick="prevSlide()">Anterior</button>
-    <button onclick="nextSlide()">Próximo</button>
-  </div>
-
   <!-- Slider -->
 
   <h1>Novidades</h1>
-  <div class="d-flex">
+  <div class="d-flex p-5">
     <div class="col-2">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.1</p>
     </div>
     <div class="col-3">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.2</p>
     </div>
     <div class="col-4">
       <img src="./comic1.jpg" alt="">
+      <br>
+      <p>Punisher Vol.3</p>
     </div>
     <div class="col-5">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.4</p>
     </div>
 
   </div>
   <h1>Populares</h1>
-  <div class="d-flex">
+  <div class="d-flex p-5">
     <div class="col-2">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.1</p>
     </div>
     <div class="col-3">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.2</p>
     </div>
     <div class="col-4">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.3</p>
     </div>
     <div class="col-5">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.4</p>
     </div>
 
   </div>
   <h1>Recomendados</h1>
-  <div class="d-flex">
+  <div class="d-flex p-5">
     <div class="col-2">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.1</p>
     </div>
     <div class="col-3">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.2</p>
     </div>
     <div class="col-4">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.3</p>
     </div>
     <div class="col-5">
       <img src="./comic1.jpg" alt="">
+      <p>Punisher Vol.4</p>
     </div>
 
   </div>
 
 </body>
-<footer>
-
+  <footer class="site-footer" style="background: black;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h3>About Us</h3>
+                <p>Insert information about the company here.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Contact Us</h3>
+                <p>Address: 123 Main Street, City, Country</p>
+                <p>Email: info@example.com</p>
+                <p>Phone: +1 234 567 890</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Customer Service</h3>
+                <ul>
+                    <li><a href="/faq">FAQs</a></li>
+                    <li><a href="/shipping-returns">Shipping & Returns</a></li>
+                    <li><a href="/terms-conditions">Terms & Conditions</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Follow Us</h3>
+                <p>Connect with us on social media:</p>
+                <!-- Social media icons -->
+                <ul class="social-icons">
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-instagram"></a></li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <h3>Subscribe to Our Newsletter</h3>
+                <form action="/subscribe" method="post">
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p>&copy; 2023 Your E-commerce. All rights reserved.</p>
+                <!-- Links to Privacy Policy and Terms of Service -->
+                <p><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
+                <!-- Payment method icons -->
+                <img src="visa.png" alt="Visa">
+                <img src="mastercard.png" alt="Mastercard">
+                <img src="paypal.png" alt="PayPal">
+            </div>
+        </div>
+    </div>
 </footer>
 <script src="script.js"></script>
 </html>
