--- a/TSI-PI1/home.html
+++ b/TSI-PI1/home.html
@@ -30,9 +30,44 @@
 </header>
 
 <body>
+  <div class="slider">
+    <div class="slides">
+        <!-- Radio Buttons-->
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <!--Fim radio buttons-->
 
+        <!--Slide Images-->
+        <div class="slide first">
+            <img src="slider1.jpg"  alt="imagem 1"/>
+        </div>
+        <div class="slide second">
+            <img src="slider2.jpg"  alt="imagem 2"/>
+        </div>
+        <div class="slide third">
+            <img src="slider3.jpg"  alt="imagem 3"/>
+        </div>
+        <!--Fim slide images-->
+
+        <!--Navigation auto-->
+        <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn2"></div>
+            <div class="auto-btn3"></div>
+        </div>
+
+    </div>
+
+    <div class="manual-navigation">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+    </div>
+    
+</div>
   <!-- Slider -->
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <!--<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -57,9 +92,8 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </div> -->
   <!-- Slider -->
-
   <h1>Novidades</h1>
   <div class="d-flex p-5">
     <div class="col-2">
