--- a/TSI-PI1/home.html
+++ b/TSI-PI1/home.html
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Ace of Spades Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
