ajuste nas imagens e textos do rodapé

--- a/TSI-PI1/home.html
+++ b/TSI-PI1/home.html
@@ -101,57 +101,57 @@
       <p>Punisher Vol.1</p>
     </div>
     <div class="col-3">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.2</p>
+      <img src="./os-vingadores-vol-55.jpg" alt="">
+      <p>Os Vingadores Vol.55</p>
     </div>
     <div class="col-4">
-      <img src="./comic1.jpg" alt="">
+      <img src="./milesmorales7_1 (1).jpg" alt="">
       <br>
-      <p>Punisher Vol.3</p>
+      <p>Miles Morales Vol.7</p>
     </div>
     <div class="col-5">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.4</p>
+      <img src="./sagaexmen16.jpg" alt="">
+      <p>Saga XMen Vol.16</p>
     </div>
 
   </div>
   <h1>Populares</h1>
   <div class="d-flex p-5">
     <div class="col-2">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.1</p>
+      <img src="./milesmorales7_1 (1).jpg" alt="">
+      <p>Miles Morales Vol.7</p>
     </div>
     <div class="col-3">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.2</p>
+      <img src="./sagademolidor14.jpg" alt="">
+      <p>Saga demolidor Vol.14</p>
     </div>
     <div class="col-4">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.3</p>
+      <img src="./vingadores54.jpg" alt="">
+      <p>Os Vingadores Vol.54</p>
     </div>
     <div class="col-5">
       <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.4</p>
+      <p>Punisher Vol.1</p>
     </div>
 
   </div>
   <h1>Recomendados</h1>
   <div class="d-flex p-5">
     <div class="col-2">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.1</p>
+      <img src="./miles-morales-vol-5.jpg" alt="">
+      <p>Miles Morales Vol.5</p>
     </div>
     <div class="col-3">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.2</p>
+      <img src="./loki_1.jpg" alt="">
+      <p>Marvel-Verse: Loki</p>
     </div>
     <div class="col-4">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.3</p>
+      <img src="./venom20224.jpg" alt="">
+      <p>Venom(2022) Vol.4</p>
     </div>
     <div class="col-5">
-      <img src="./comic1.jpg" alt="">
-      <p>Punisher Vol.4</p>
+      <img src="./sagaexmen16.jpg" alt="">
+      <p>Saga XMen Vol.16</p>
     </div>
 
   </div>
@@ -162,7 +162,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h3>About Us</h3>
-                <p>Insert information about the company here.</p>
+                <p>Bem-vindo à Ace of Spades Store, onde celebramos o poder das histórias visuais. Oferecemos uma seleção diversificada, cuidadosamente curada por uma equipe apaixonada. Nosso compromisso vai além de vender quadrinhos; queremos construir uma comunidade que compartilhe a paixão pela arte e criatividade. Explore conosco e descubra o fascinante universo das HQs.</p>
             </div>
             <div class="col-md-4">
                 <h3>Contact Us</h3>
@@ -185,18 +185,29 @@
                 <p>Connect with us on social media:</p>
                 <!-- Social media icons -->
                 <ul class="social-icons">
-                    <li><a href="#" class="fa fa-facebook"></a></li>
-                    <li><a href="#" class="fa fa-twitter"></a></li>
-                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="/facebook" class="fa fa-facebook"></a>facebook.com/aceofspadesstore</li>
+                    <li><a href="/twitter" class="fa fa-twitter"></a>twitter.com/aceofspadesstore</li>
+                    <li><a href="/instagram" class="fa fa-instagram">instagram.com/aceofspadesstore</a></li>
                 </ul>
             </div>
-
+            <div class="col-md-6">
+                <h3>Subscribe to Our Newsletter</h3>
+                <form action="/subscribe" method="post">
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <p>&copy; 2023 Your E-commerce. All rights reserved.</p>
                 <!-- Links to Privacy Policy and Terms of Service -->
                 <p><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
+                <!-- Payment method icons -->
+                <img class="mini" src="klipartz.com (4).png" alt="Visa">
+                <img class="mini" src="klipartz.com (5).png" alt="Mastercard">
+                <img class="mini" src="klipartz.com (3).png" alt="AmericanExpress">
+                <img class="mini" src="klipartz.com (6).png" alt="DiscoverNetwork">
             </div>
         </div>
     </div>
