--- a/TSI-PI1/home.html
+++ b/TSI-PI1/home.html
@@ -22,7 +22,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="#">FAQ</a>
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#anchor">About</a>
         </div>
       </div>
     </div>
@@ -66,37 +66,10 @@
     </div>
     
 </div>
-  <!-- Slider -->
-  <!--<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="slider3.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="slider2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> -->
-  <!-- Slider -->
+  
   <h1>Novidades</h1>
   <div class="d-flex p-5">
-    <div class="col-2">
+    <div class="col-3">
       <img src="./comic1.jpg" alt="">
       <p>Punisher Vol.1</p>
     </div>
@@ -104,12 +77,12 @@
       <img src="./os-vingadores-vol-55.jpg" alt="">
       <p>Os Vingadores Vol.55</p>
     </div>
-    <div class="col-4">
+    <div class="col-3">
       <img src="./milesmorales7_1 (1).jpg" alt="">
       <br>
       <p>Miles Morales Vol.7</p>
     </div>
-    <div class="col-5">
+    <div class="col-3">
       <img src="./sagaexmen16.jpg" alt="">
       <p>Saga XMen Vol.16</p>
     </div>
@@ -117,7 +90,7 @@
   </div>
   <h1>Populares</h1>
   <div class="d-flex p-5">
-    <div class="col-2">
+    <div class="col-3">
       <img src="./milesmorales7_1 (1).jpg" alt="">
       <p>Miles Morales Vol.7</p>
     </div>
@@ -125,11 +98,11 @@
       <img src="./sagademolidor14.jpg" alt="">
       <p>Saga demolidor Vol.14</p>
     </div>
-    <div class="col-4">
+    <div class="col-3">
       <img src="./vingadores54.jpg" alt="">
       <p>Os Vingadores Vol.54</p>
     </div>
-    <div class="col-5">
+    <div class="col-3">
       <img src="./comic1.jpg" alt="">
       <p>Punisher Vol.1</p>
     </div>
@@ -137,19 +110,19 @@
   </div>
   <h1>Recomendados</h1>
   <div class="d-flex p-5">
-    <div class="col-2">
+    <div class="col-3">
       <img src="./miles-morales-vol-5.jpg" alt="">
       <p>Miles Morales Vol.5</p>
     </div>
-    <div class="col-3">
+    <div class="col-3 ">
       <img src="./loki_1.jpg" alt="">
       <p>Marvel-Verse: Loki</p>
     </div>
-    <div class="col-4">
+    <div class="col-3">
       <img src="./venom20224.jpg" alt="">
       <p>Venom(2022) Vol.4</p>
     </div>
-    <div class="col-5">
+    <div class="col-3">
       <img src="./sagaexmen16.jpg" alt="">
       <p>Saga XMen Vol.16</p>
     </div>
@@ -160,7 +133,7 @@
   <footer class="site-footer" style="background: black;">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" id="anchor">
                 <h3>About Us</h3>
                 <p>Bem-vindo à Ace of Spades Store, onde celebramos o poder das histórias visuais. Oferecemos uma seleção diversificada, cuidadosamente curada por uma equipe apaixonada. Nosso compromisso vai além de vender quadrinhos; queremos construir uma comunidade que compartilhe a paixão pela arte e criatividade. Explore conosco e descubra o fascinante universo das HQs.</p>
             </div>
@@ -189,13 +162,6 @@
                     <li><a href="/twitter" class="fa fa-twitter"></a>twitter.com/aceofspadesstore</li>
                     <li><a href="/instagram" class="fa fa-instagram">instagram.com/aceofspadesstore</a></li>
                 </ul>
-            </div>
-            <div class="col-md-6">
-                <h3>Subscribe to Our Newsletter</h3>
-                <form action="/subscribe" method="post">
-                    <input type="email" name="email" placeholder="Enter your email" required>
-                    <button type="submit">Subscribe</button>
-                </form>
             </div>
         </div>
         <div class="row">
