--- a/TSI-PI1/home.html
+++ b/TSI-PI1/home.html
@@ -20,9 +20,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Início</a>
           <a class="nav-link" href="#">FAQ</a>
-          <a class="nav-link" href="#anchor">About</a>
+          <a class="nav-link" href="#anchor">Sobre</a>
         </div>
       </div>
     </div>
@@ -146,28 +146,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4" id="anchor">
-                <h3>About Us</h3>
+                <h3>Sobre Nós</h3>
                 <p>Bem-vindo à Ace of Spades Store, onde celebramos o poder das histórias visuais. Oferecemos uma seleção diversificada, cuidadosamente curada por uma equipe apaixonada. Nosso compromisso vai além de vender quadrinhos; queremos construir uma comunidade que compartilhe a paixão pela arte e criatividade. Explore conosco e descubra o fascinante universo das HQs.</p>
             </div>
             <div class="col-md-4">
-                <h3>Contact Us</h3>
-                <p>Address: 123 Main Street, City, Country</p>
-                <p>Email: info@example.com</p>
-                <p>Phone: +1 234 567 890</p>
+                <h3>Entre em Contato</h3>
+                <p>Endereço: 123 Main Street, City, Country</p>
+                <p>Email: info@exemplo.com</p>
+                <p>Telefone: +1 234 567 890</p>
             </div>
             <div class="col-md-4">
-                <h3>Customer Service</h3>
+                <h3>Atendimento ao cliente</h3>
                 <ul>
                     <li><a href="/faq">FAQs</a></li>
-                    <li><a href="/shipping-returns">Shipping & Returns</a></li>
-                    <li><a href="/terms-conditions">Terms & Conditions</a></li>
+                    <li><a href="/shipping-returns">Envio & Devoluções</a></li>
+                    <li><a href="/terms-conditions">Termos & Condições</a></li>
                 </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h3>Follow Us</h3>
-                <p>Connect with us on social media:</p>
+                <h3>Siga-nos</h3>
+                <p>Conecte-se conosco nas mídias sociais:</p>
                 <!-- Social media icons -->
                 <ul class="social-icons">
                     <li><a href="/facebook" class="fa fa-facebook"></a>facebook.com/aceofspadesstore</li>
@@ -178,9 +178,9 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <p>&copy; 2023 Your E-commerce. All rights reserved.</p>
+                <p>&copy; 2023 Nosso E-commerce. Todos Direitos Reservados.</p>
                 <!-- Links to Privacy Policy and Terms of Service -->
-                <p><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
+                <p><a href="/privacy-policy">Política de Privacidade</a> | <a href="/terms-of-service">Termos de Serviço</a></p>
                 <!-- Payment method icons -->
                 <img class="mini" src="klipartz.com (4).png" alt="Visa">
                 <img class="mini" src="klipartz.com (5).png" alt="Mastercard">
